--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "homepage": "https://github.com/vineeth20v/TextUtils.git",
+ 
   "name": "TextUtils",
+ "homepage": "https://vineeth20v.github.io/TextUtils/",
+ 
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
