--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
  "homepage": "https://vineeth20v.github.io/TextUtils/",
  
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
